# python-project-lvl2

./: .coverage  .gitignore  .travis.yml  Makefile  README.md  coverage.xml  pyproject.toml
diff/: engine.py  parsers.py
diff/formats/: json.py
diff/formatters/: __init__.py  flat.py  json.py  json_format.py  recursive.py
diff/scripts/: gendiff.py
gendiff/: __init__.py  constants.py  diff.py  engine.py  loaders.py  parsers.py
gendiff/format/: __init__.py  default.py  json.py  plain.py
gendiff/formatters/: __init__.py  dump.py  plain.py  recursive.py
gendiff/scripts/: gendiff.py
tests/: test_engine.py
tests/fixtures/: after.yml  before.yml  before_recursion.yml  dict.txt  example2.json  exp_flat.txt  exp_generate_diff.txt  exp_json.txt  exp_recursion.txt  magic_one.json  magic_two.json  test.txt
tests/fixtures/input/: after_recursion.yml  before_recursion.yml
tests/fixtures/result/: exp_dump.txt  exp_flat.txt  exp_generate_diff.json  exp_generate_diff.txt  exp_plain.txt  exp_recursion.txt
