[tool.poetry]
name = "alekorn-diff"
version = "0.1.0"
description = ""
authors = ["alekorn <entkorn@gmail.com>"]
packages = [
  { include = "diff" },
]
[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"
pytest = "^5.3.4"

[tool.poetry.scripts]
gendiff = "diff.scripts.gendiff:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

